Traveler APIs and refactor

--- a/TicketReservationSystemAPI/appsettings.Development.json
+++ b/TicketReservationSystemAPI/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "MongoDbSettings": {
+    "ConnectionURI": "mongodb_uri",
+    "DatabaseName": "TicketReservation"
+  },
+  "AppSettings": {
+    "Token": "secret_key"
   }
 }
