User functionalities, Deployment issues

--- a/TicketReservationSystemAPI/appsettings.Development.json
+++ b/TicketReservationSystemAPI/appsettings.Development.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "MongoDbSettings": {
-    "ConnectionURI": "mongodb_uri",
-    "DatabaseName": "TicketReservation"
+    "ConnectionString": "mongo_uri",
+    "DatabaseName": "database_name"
   },
   "AppSettings": {
-    "Token": "secret_key"
+    "Token": "jwt_secret"
   }
 }
