--- a/TicketReservationSystemAPI/TicketReservationSystemAPI.csproj
+++ b/TicketReservationSystemAPI/TicketReservationSystemAPI.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\ResevationService\**" />
+    <Content Remove="Services\ResevationService\**" />
+    <EmbeddedResource Remove="Services\ResevationService\**" />
+    <None Remove="Services\ResevationService\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.22" />
@@ -16,10 +23,6 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.11" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\ResevationService\" />
   </ItemGroup>
 
 </Project>
